--- a/AzClient/AzClient.vcxproj
+++ b/AzClient/AzClient.vcxproj
@@ -167,10 +167,13 @@
   <ItemGroup>
     <ClCompile Include="AzClient\data\GameData.cpp" />
     <ClCompile Include="AzClient\hook\HookManager.cpp" />
+    <ClCompile Include="AzClient\module\modules\Arraylist.cpp" />
     <ClCompile Include="AzClient\module\Module.cpp" />
     <ClCompile Include="AzClient\module\ModuleManager.cpp" />
     <ClCompile Include="AzClient\module\modules\AirJump.cpp" />
     <ClCompile Include="AzClient\module\modules\AutoSprint.cpp" />
+    <ClCompile Include="AzClient\module\modules\Reach.cpp" />
+    <ClCompile Include="AzClient\module\modules\Scaffold.cpp" />
     <ClCompile Include="AzClient\module\modules\Killaura.cpp" />
     <ClCompile Include="AzClient\module\modules\Step.cpp" />
     <ClCompile Include="AzClient\module\modules\TabGUI.cpp" />
@@ -190,8 +193,11 @@
     <ClInclude Include="AzClient\module\Module.h" />
     <ClInclude Include="AzClient\module\ModuleManager.h" />
     <ClInclude Include="AzClient\module\modules\AirJump.h" />
+    <ClInclude Include="AzClient\module\modules\Arraylist.h" />
     <ClInclude Include="AzClient\module\modules\AutoSprint.h" />
     <ClInclude Include="AzClient\module\modules\Killaura.h" />
+    <ClInclude Include="AzClient\module\modules\Reach.h" />
+    <ClInclude Include="AzClient\module\modules\Scaffold.h" />
     <ClInclude Include="AzClient\module\modules\Step.h" />
     <ClInclude Include="AzClient\module\modules\TabGUI.h" />
     <ClInclude Include="AzClient\sdk\Actor.h" />
@@ -213,6 +219,7 @@
     <ClInclude Include="AzClient\utils\RenderUtils.h" />
     <ClInclude Include="AzClient\utils\Utils.h" />
     <ClInclude Include="include\MinHook.h" />
+    <ClInclude Include="include\xorstr.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
