--- a/AzClient/AzClient.vcxproj
+++ b/AzClient/AzClient.vcxproj
@@ -167,16 +167,21 @@
   <ItemGroup>
     <ClCompile Include="AzClient\data\GameData.cpp" />
     <ClCompile Include="AzClient\hook\HookManager.cpp" />
+    <ClCompile Include="AzClient\module\modules\Aimbot.cpp" />
     <ClCompile Include="AzClient\module\modules\Arraylist.cpp" />
     <ClCompile Include="AzClient\module\Module.cpp" />
     <ClCompile Include="AzClient\module\ModuleManager.cpp" />
     <ClCompile Include="AzClient\module\modules\AirJump.cpp" />
     <ClCompile Include="AzClient\module\modules\AutoSprint.cpp" />
+    <ClCompile Include="AzClient\module\modules\Bhop.cpp" />
+    <ClCompile Include="AzClient\module\modules\Instabreak.cpp" />
     <ClCompile Include="AzClient\module\modules\Reach.cpp" />
     <ClCompile Include="AzClient\module\modules\Scaffold.cpp" />
     <ClCompile Include="AzClient\module\modules\Killaura.cpp" />
+    <ClCompile Include="AzClient\module\modules\Bhop.h" />
     <ClCompile Include="AzClient\module\modules\Step.cpp" />
     <ClCompile Include="AzClient\module\modules\TabGUI.cpp" />
+    <ClCompile Include="AzClient\module\modules\Uninject.cpp" />
     <ClCompile Include="AzClient\utils\RenderUtils.cpp" />
     <ClCompile Include="AzClient\utils\Utils.cpp" />
     <ClCompile Include="dllmain.cpp" />
@@ -192,14 +197,17 @@
     <ClInclude Include="AzClient\hook\hooks\RenderContext.h" />
     <ClInclude Include="AzClient\module\Module.h" />
     <ClInclude Include="AzClient\module\ModuleManager.h" />
+    <ClInclude Include="AzClient\module\modules\Aimbot.h" />
     <ClInclude Include="AzClient\module\modules\AirJump.h" />
     <ClInclude Include="AzClient\module\modules\Arraylist.h" />
     <ClInclude Include="AzClient\module\modules\AutoSprint.h" />
+    <ClInclude Include="AzClient\module\modules\Instabreak.h" />
     <ClInclude Include="AzClient\module\modules\Killaura.h" />
     <ClInclude Include="AzClient\module\modules\Reach.h" />
     <ClInclude Include="AzClient\module\modules\Scaffold.h" />
     <ClInclude Include="AzClient\module\modules\Step.h" />
     <ClInclude Include="AzClient\module\modules\TabGUI.h" />
+    <ClInclude Include="AzClient\module\modules\Uninject.h" />
     <ClInclude Include="AzClient\sdk\Actor.h" />
     <ClInclude Include="AzClient\sdk\ClientInstance.h" />
     <ClInclude Include="AzClient\sdk\Color.h" />
