--- a/AzClient/AzClient.vcxproj
+++ b/AzClient/AzClient.vcxproj
@@ -178,13 +178,17 @@
     <ClCompile Include="AzClient\data\GameData.cpp" />
     <ClCompile Include="AzClient\hook\HookManager.cpp" />
     <ClCompile Include="AzClient\module\modules\Aimbot.cpp" />
+    <ClCompile Include="AzClient\module\modules\AirSwim.cpp" />
     <ClCompile Include="AzClient\module\modules\Arraylist.cpp" />
     <ClCompile Include="AzClient\module\Module.cpp" />
     <ClCompile Include="AzClient\module\ModuleManager.cpp" />
     <ClCompile Include="AzClient\module\modules\AirJump.cpp" />
     <ClCompile Include="AzClient\module\modules\AutoSprint.cpp" />
     <ClCompile Include="AzClient\module\modules\Bhop.cpp" />
+    <ClCompile Include="AzClient\module\modules\EditionFaker.cpp" />
+    <ClCompile Include="AzClient\module\modules\FastLadder.cpp" />
     <ClCompile Include="AzClient\module\modules\Instabreak.cpp" />
+    <ClCompile Include="AzClient\module\modules\NoKB.cpp" />
     <ClCompile Include="AzClient\module\modules\Reach.cpp" />
     <ClCompile Include="AzClient\module\modules\Scaffold.cpp" />
     <ClCompile Include="AzClient\module\modules\Killaura.cpp" />
@@ -200,25 +204,32 @@
     <ClInclude Include="AzClient\data\GameData.h" />
     <ClInclude Include="AzClient\hook\Hook.h" />
     <ClInclude Include="AzClient\hook\HookManager.h" />
+    <ClInclude Include="AzClient\hook\hooks\Actor.h" />
     <ClInclude Include="AzClient\hook\hooks\ChatScreenController.h" />
     <ClInclude Include="AzClient\hook\hooks\ClientInstance.h" />
     <ClInclude Include="AzClient\hook\hooks\GameMode.h" />
     <ClInclude Include="AzClient\hook\hooks\Keyboard.h" />
+    <ClInclude Include="AzClient\hook\hooks\Other.h" />
     <ClInclude Include="AzClient\hook\hooks\RenderContext.h" />
     <ClInclude Include="AzClient\module\Module.h" />
     <ClInclude Include="AzClient\module\ModuleManager.h" />
     <ClInclude Include="AzClient\module\modules\Aimbot.h" />
     <ClInclude Include="AzClient\module\modules\AirJump.h" />
+    <ClInclude Include="AzClient\module\modules\AirSwim.h" />
     <ClInclude Include="AzClient\module\modules\Arraylist.h" />
     <ClInclude Include="AzClient\module\modules\AutoSprint.h" />
+    <ClInclude Include="AzClient\module\modules\EditionFaker.h" />
+    <ClInclude Include="AzClient\module\modules\FastLadder.h" />
     <ClInclude Include="AzClient\module\modules\Instabreak.h" />
     <ClInclude Include="AzClient\module\modules\Killaura.h" />
+    <ClInclude Include="AzClient\module\modules\NoKB.h" />
     <ClInclude Include="AzClient\module\modules\Reach.h" />
     <ClInclude Include="AzClient\module\modules\Scaffold.h" />
     <ClInclude Include="AzClient\module\modules\Step.h" />
     <ClInclude Include="AzClient\module\modules\TabGUI.h" />
     <ClInclude Include="AzClient\module\modules\Uninject.h" />
     <ClInclude Include="AzClient\sdk\Actor.h" />
+    <ClInclude Include="AzClient\sdk\AppPlatform.h" />
     <ClInclude Include="AzClient\sdk\ClientInstance.h" />
     <ClInclude Include="AzClient\sdk\Color.h" />
     <ClInclude Include="AzClient\sdk\GameMode.h" />
